<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_clientes"
        android:icon="@drawable/ic_person"
        android:title="@string/clientes" />

    <item
        android:id="@+id/nav_equipos"
        android:icon="@drawable/ic_computer"
        android:title="@string/equipos" />

    <item
        android:id="@+id/nav_mantenimientos"
        android:icon="@drawable/ic_build"
        android:title="@string/mantenimientos" />

    <item
        android:id="@+id/nav_reportes"
        android:icon="@drawable/ic_assessment"
        android:title="@string/reportes" />

</menu>